--- a/TurfAppWpf/TurfAppWpf/EditProduct.xaml
+++ b/TurfAppWpf/TurfAppWpf/EditProduct.xaml
@@ -17,7 +17,7 @@
             </ComboBox.ItemTemplate> -->
         </ComboBox>
         <Label Content="Pricelist:" HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Top"/>
-        <DataGrid x:Name="dgProducts" HorizontalAlignment="Left" Height="283" Margin="0,75,0,0" VerticalAlignment="Top" Width="631" BeginningEdit="dgProducts_BeginningEdit">
+        <DataGrid x:Name="dgProducts" AutoGenerateColumns="False" HorizontalAlignment="Left" Height="283" Margin="0,75,0,0" VerticalAlignment="Top" Width="631" CellEditEnding="dgProducts_CellEditEnding">
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding Name}" ClipboardContentBinding="{x:Null}" Header="Product Name"/>
                 <DataGridTextColumn Binding="{Binding Volume}" ClipboardContentBinding="{x:Null}" Header="Volume(mL)"/>
