--- a/Turfer/TurfAppWpf/CreateEvent.xaml
+++ b/Turfer/TurfAppWpf/CreateEvent.xaml
@@ -5,14 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TurfAppWpf"
         mc:Ignorable="d"
-        Title="CreateEvent" Height="300" Width="300">
-    <Grid>
-        <Grid HorizontalAlignment="Left" Height="270" VerticalAlignment="Top" Width="294" Margin="0,0,-0.4,0">
-            <Button Content="Add" Margin="108,181,108,0" VerticalAlignment="Top" RenderTransformOrigin="0.328,0.648" Click="BtnSendEventData"/>
-            <Label Content="Create a new Event" HorizontalAlignment="Left" Margin="87,34,0,0" VerticalAlignment="Top" RenderTransformOrigin="2.439,0.252" Width="120"/>
-            <TextBox x:Name="EventNameTextbox" Margin="87,75,87,172" TextWrapping="Wrap" Text="Event Name"/>
-            <ComboBox x:Name="PricelistComoboBox" Margin="87,133,87,0" VerticalAlignment="Top"/>
-        </Grid>
+        Title="CreateEvent" Height="295.152" Width="231.514">
 
+    <Grid Margin="0,0,2,0">
+        <Button Content="Add" Margin="39,204,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.328,0.648" Click="BtnSendEventData" HorizontalAlignment="Left" Width="148" Height="25"/>
+        <Label Content="Create a new Event" HorizontalAlignment="Left" Margin="39,18,0,0" VerticalAlignment="Top" RenderTransformOrigin="2.439,0.252" Width="148"/>
+        <TextBox x:Name="EventNameTextbox" Margin="39,92,0,0" TextWrapping="Wrap" Height="34" VerticalAlignment="Top" HorizontalAlignment="Left" Width="148" RenderTransformOrigin="0.528,1.027" />
+        <ComboBox x:Name="PricelistComoboBox" Margin="39,145,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="148" Height="37"/>
+        <Label Content="Name:" HorizontalAlignment="Left" Margin="39,58,0,0" VerticalAlignment="Top" Height="34" Width="49"/>
     </Grid>
 </Window>
