--- a/Turfer/TurfAppWpf/LoadEvent.xaml
+++ b/Turfer/TurfAppWpf/LoadEvent.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TurfAppWpf"
         mc:Ignorable="d"
-        Title="LoadEvent" Height="300" Width="300">
-    <Grid>
-        <ComboBox x:Name="comboBoxEvents" HorizontalAlignment="Left" Margin="55,37,0,0" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Label" HorizontalAlignment="Left" Margin="58,81,0,0" VerticalAlignment="Top" Width="117"/>
-        <Button Content="Load" HorizontalAlignment="Left" Margin="58,139,0,0" VerticalAlignment="Top" Width="75" Click="BtnLoadSelectedEvent"/>
+        Title="LoadEvent" Height="235.758" Width="223.636">
+    <Grid Margin="0,0,2,1">
+        <ComboBox x:Name="comboBoxEvents" HorizontalAlignment="Left" Margin="36,60,0,0" VerticalAlignment="Top" Width="156" Height="29"/>
+        <Label Content="Pleas select an Event" HorizontalAlignment="Left" Margin="45,10,0,0" VerticalAlignment="Top" Width="132"/>
+        <Button Content="Load" HorizontalAlignment="Left" Margin="57,162,0,0" VerticalAlignment="Top" Width="103" Click="BtnLoadSelectedEvent" Height="32"/>
 
     </Grid>
 </Window>
